--- a/css/impress-demo.css
+++ b/css/impress-demo.css
@@ -85,7 +85,7 @@ body {
     font-family: 'PT Sans', sans-serif;
     min-height: 740px;
 
-    background-image: url(./assets/ocean-sky.jpg);
+    background-image: url(../assets/ocean-sky.jpg);
 }
 
 /*
