--- a/src/main.scss
+++ b/src/main.scss
@@ -93,21 +93,32 @@ body {
     }
   }
 
-  #graph-1 {
-    display: none;
-    .cls-1 {
-      fill: none;
-      stroke: #fff;
-      stroke-miterlimit: 10;
-      stroke-width: 2px;
-    }
+  .graph {
+    svg {
+      .cls-1 {
+        fill: none;
+        stroke: #fff;
+        stroke-miterlimit: 10;
+        stroke-width: 2px;
+      }
 
-    .cls-2 {
-      fill: #ccc;
+      .cls-2 {
+        fill: #ccc;
+        transform: scaleY(0);
+        transform-origin: bottom;
+        transition: transform 0.5s ease;
+        transform-box: fill-box;
+      }
     }
+    opacity: 0;
     width: 600px;
     position: absolute;
+    z-index: 1;
+    left: 150px;
+    right: 150px;
+
   }
+
   .text-wrapper {
     display: flex;
     align-items: stretch;
@@ -177,7 +188,8 @@ body {
     margin-top: -156px;
     z-index: 1;
     opacity: 0;
-    transition: opacity 0.5s ease 1s, transform 0.5s ease, top 0.5s ease, left 0.5s ease;
+    transition: opacity 0.5s ease 1s, transform 0.5s ease, top 0.5s ease,
+      left 0.5s ease;
     h1 {
       line-height: 1.3;
       font-size: 120px;
@@ -189,6 +201,41 @@ body {
         padding-left: 120px;
       }
       transition: padding 0.5s ease;
+    }
+  }
+  .ocean .pillwrapper {
+    opacity: 0;
+    width: 350px;
+    position: absolute;
+    transform-origin: center;
+    transition: top 0.5s ease 0.5s;
+    .pill {
+      width: 350px;
+    }
+    &.b {
+      top: 100%;
+      left: 50%;
+      animation: wiggle 3s infinite;
+    }
+    &.g {
+      top: 100%;
+      left: 10%;
+      animation: wiggle 5s infinite;
+    }
+  }
+
+  .broken {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -400px;
+    margin-top: -130px;
+    width: 800px;
+    z-index: 1;
+    opacity: 0;
+    transition: opacity 0.5s ease 0.5s;
+    img {
+      width: 100%;
     }
   }
   &[data-step="1"],
@@ -226,26 +273,7 @@ body {
       opacity: 1;
     }
   }
-  .ocean .pillwrapper {
-    opacity: 0;
-    width: 350px;
-    position: absolute;
-    transform-origin: center;
-    transition: top 0.5s ease 0.5s;
-    .pill {
-      width: 350px;
-    }
-    &.b {
-      top: 100%;
-      left: 50%;
-      animation: wiggle 3s infinite;
-    }
-    &.g {
-      top: 100%;
-      left: 10%;
-      animation: wiggle 5s infinite;
-    }
-  }
+
   &[data-step="4"],
   &[data-step="3"] {
     .ocean {
@@ -263,6 +291,8 @@ body {
   }
 
   /* Ocean full screen */
+  &[data-step="10"],
+  &[data-step="9"],
   &[data-step="8"],
   &[data-step="7"],
   &[data-step="6"],
@@ -276,6 +306,7 @@ body {
   }
 
   /* display pill */
+  &[data-step="9"],
   &[data-step="8"],
   &[data-step="7"],
   &[data-step="6"],
@@ -310,6 +341,7 @@ body {
     }
   }
 
+  &[data-step="9"],
   &[data-step="8"],
   &[data-step="7"],
   &[data-step="6"] {
@@ -339,6 +371,7 @@ body {
     }
   }
 
+  &[data-step="9"],
   &[data-step="8"],
   &[data-step="7"] {
     .abr {
@@ -349,17 +382,58 @@ body {
       transition-delay: 1s;
     }
   }
+  &[data-step="9"],
   &[data-step="8"] {
     .abr {
-      transform: scale(0.5);
+      transform: scale(0.7);
       top: 200px;
-      left: 20%;
+      left: 16%;
       .first {
         padding-left: 120px;
       }
       .last {
         padding-left: 0;
       }
+    }
+    .graph {
+      opacity: 1;
+      @for $i from 1 to 9 {
+        .rect-#{$i} {
+          transition-delay: #{$i/8}s;
+        }
+      }
+      .cls-2 {
+        transform: scaleY(1);
+      }
+    }
+  }
+  &[data-step="9"] {
+    .abr, .graph {
+      transition: opacity 0.5s ease;
+      opacity: 0;
+    }
+    .ocean .pillwrapper.g {
+      transition: all 0.5s ease;
+      left: 50%;
+      top: 50%;
+      margin-left: -175px;
+      margin-top: -125px;
+      animation: wiggleSmall 0.1s infinite;
+      .pill {
+        transition: all 0.5s ease;
+        transform: scale(2) rotate(45deg);
+      }
+    }
+    .ocean .pillwrapper.b {
+      top: 100%;
+    }
+  }
+  &[data-step="10"] {
+    .broken {
+      opacity: 1;
+    }
+    .ocean {
+      animation: oceanLightning 0.5s linear 1;
     }
   }
 }
@@ -397,5 +471,28 @@ body.impress-on-step-2 .bg {
   }
   to {
     transform: rotate(-5deg);
+  }
+}
+@keyframes wiggleSmall {
+  from {
+    transform: rotate(-1deg);
+  }
+  50% {
+    transform: rotate(1deg);
+  }
+  to {
+    transform: rotate(-1deg);
+  }
+}
+
+@keyframes oceanLightning {
+  from {
+    background: rgba(0, 57, 255, 1);
+  }
+  50% {
+    background: #6883e2;
+  }
+  to {
+    background: rgba(0, 57, 255, 1);
   }
 }
